# stelvin

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DECISIONS.md  Dockerfile  README.md  SUBMISSION.md  docker-entrypoint.sh
Drand-Relay/: .env.example  .gitignore  Cargo.toml  README.md  package.json
Drand-Relay/.github/workflows/: deploy-demo.yml
Drand-Relay/contracts/dice-game/: Cargo.toml
Drand-Relay/contracts/dice-game/src/: lib.rs
Drand-Relay/contracts/dice-game/test_snapshots/tests/: test_history_capped_at_10.1.json  test_roll_and_settle.1.json
Drand-Relay/contracts/drand-verifier/: Cargo.toml
Drand-Relay/demo/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
Drand-Relay/demo/src/: App.tsx  wallet.ts
Drand-Relay/docs/: MAINNET.md  RUNBOOK.md
Drand-Relay/feeder/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  package-lock.json  package.json
Drand-Relay/feeder/src/: drand.ts  index.ts  server.ts  soroban.ts
contracts/batch-gate/: Cargo.toml
contracts/batch-gate/src/: drand_consts.rs  lib.rs  test.rs
demo/: DEMO_SCRIPT.md  VIDEO_SCRIPT.md  sample-run.txt
scripts/: deploy_and_smoke.sh  railway-setup.sh
settler/: README.md  package-lock.json  package.json
settler/src/: frontrunner-bot.ts  lib.ts  server.ts  settler.ts  tlock-roundtrip.ts  verify.ts
web/: BRAND.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/public/assets/: README.md
web/src/: App.tsx  main.tsx  styles.css
web/src/components/: BeaconPulse.tsx  (+7 more)
(+35 files in other folders)
